# RB_SpotATS_System

./: .gitignore  README.md
ATS_IsaacSim/: README.md
ATS_IsaacSim/Main/ATS_Enviroment/: .collect.mapping.json  Spot_Ats.usd  Spot_Ats2.usd  Spot_Ats2_with_Environment.usd  Spot_Ats_anim.usd  World.usd  spot_policy_ats_retrained.pt
ATS_IsaacSim/Main/Spot_ATS_Proj/: USD_test.py  main.py  run_isaac.sh  slam.yaml  spot_policy_visual.py
ATS_IsaacSim/Main/Spot_ATS_Proj/app/: controller.py  graph_builder.py  input.py  loop.py  observation.py  pedestrian.py  policy.py  sim_app.py  utils.py  world.py
ATS_IsaacSim/Main/Spot_ATS_Proj/configs/: default(backup).yaml  default.yaml
ATS_IsaacSim/Main/Spot_ATS_Proj/logs/: ats_dofs_20250921_162937.txt  dof_dump_20250921_163517.txt  dof_dump_20250921_164041.txt
phyAI_ws/: frames_2025-12-17_22.51.34.gv  frames_2026-01-27_19.50.28.gv  map.pgm  map.yaml  map2.pgm  map2.yaml  map2_edited.pgm  map2_edited_test.pgm  nav2_localization_params.yaml  nav2_params.yaml  nav2_slam_only.yaml  slam_toolbox_params.yaml  spot_ats.rviz  spot_ats.yaml  spot_ats.yml
phyAI_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
phyAI_ws/install/ats_keyboard_control/lib/ats_keyboard_control/: keyboard_control
phyAI_ws/install/ats_keyboard_control/share/ats_keyboard_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
phyAI_ws/install/ats_msgs/include/ats_msgs/ats_msgs/msg/: plan_command.h  replan_request.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
phyAI_ws/install/ats_msgs/include/ats_msgs/ats_msgs/msg/detail/: ats_state__builder.hpp  ats_state__functions.c  ats_state__rosidl_typesupport_fastrtps_cpp.hpp  ats_state__rosidl_typesupport_introspection_cpp.hpp  (+18 more)
phyAI_ws/install/ats_msgs/share/ament_index/resource_index/rosidl_interfaces/: ats_msgs
phyAI_ws/install/ats_msgs/share/ats_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
phyAI_ws/install/ats_msgs/share/ats_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ats_msgsConfig.cmake  ats_msgs__rosidl_typesupport_cppExport-noconfig.cmake  ats_msgs__rosidl_typesupport_introspection_cExport.cmake  export_ats_msgs__rosidl_generator_cExport-noconfig.cmake  export_ats_msgs__rosidl_generator_pyExport-noconfig.cmake  export_ats_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_ats_msgs__rosidl_typesupport_fastrtps_cppExport.cmake
phyAI_ws/install/ats_msgs/share/ats_msgs/msg/: AtsState.idl  PlanCommand.msg  ReplanRequest.idl
phyAI_ws/install/ats_system1/lib/ats_system1/: system1_executor_node
phyAI_ws/install/ats_system1/share/ats_system1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
phyAI_ws/install/ats_system2/lib/ats_system2/: system2_node
phyAI_ws/install/ats_system2/share/ats_system2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
phyAI_ws/install/head_follow_controller/lib/head_follow_controller/: head_follow_controller
phyAI_ws/install/head_follow_controller/share/head_follow_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
phyAI_ws/install/head_follow_controller/share/head_follow_controller/launch/: head_follow.launch.py
phyAI_ws/install/map_info_logger/lib/map_info_logger/: map_info_logger
phyAI_ws/install/map_info_logger/share/map_info_logger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
phyAI_ws/install/vision_context_builder/lib/vision_context_builder/: vision_context_builder_node
phyAI_ws/install/vision_context_builder/share/vision_context_builder/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
phyAI_ws/install/yolov8_bringup/share/ament_index/resource_index/parent_prefix_path/: yolov8_bringup
phyAI_ws/install/yolov8_bringup/share/yolov8_bringup/: package.sh
phyAI_ws/install/yolov8_msgs/share/yolov8_msgs/: package.sh
phyAI_ws/install/yolov8_ros/share/yolov8_ros/: package.sh
phyAI_ws/log/: latest_build
phyAI_ws/src/ats_keyboard_control/: README.md  setup.cfg  setup.py
phyAI_ws/src/ats_msgs/: CMakeLists.txt  LICENSE
phyAI_ws/src/ats_msgs/msg/: ReplanRequest.msg
phyAI_ws/src/ats_system1/: colcon.pkg  setup.cfg  setup.py
phyAI_ws/src/ats_system1/ats_system1/core/: guards.py  plan_schema.py
phyAI_ws/src/ats_system1/ats_system1/utils/: geometry.py
phyAI_ws/src/ats_system2/: package.xml  setup.cfg  setup.py
phyAI_ws/src/ats_system2/ats_system2/: llm_planner.py  models.py  system2_node.py
phyAI_ws/src/head_follow_controller/: setup.cfg  setup.py
phyAI_ws/src/map_info_logger/: README.md  package.xml  setup.cfg  setup.py
phyAI_ws/src/vision_context_builder/: setup.cfg  setup.py
phyAI_ws/src/yolov8_ros/: Va
phyAI_ws/src/yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py
(+23 files in other folders)
