<?xml version="1.0"?>
<package format="3">
  <name>ats_keyboard_control</name>
  <version>0.0.1</version>
  <description>Keyboard-driven publisher for System-2 plan_cmd (track/cancel)</description>
  <maintainer email="engiman0401@gmail.com">geunpilpark</maintainer>
  <license>CC-BY-NC-ND-4.0</license>


  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ats_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
