<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ats_msgs</name>
  <version>0.0.1</version>
  <description>ATS interface definitions (msg)</description>

  <maintainer email="engiman0401@gmail.com">geunpilpark</maintainer>
  <license>CC-BY-NC-ND-4.0</license>

  <!-- ★ 핵심: 인터페이스 패키지 선언 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 빌드 툴 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl 기본 제너레이터 -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- msg가 참조하는 타입 패키지(필요 시 추가) -->
  <depend>builtin_interfaces</depend>
  <!-- 예: std_msgs/geometry_msgs 쓰면 아래처럼 더 추가
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  -->

  <!-- 실행 시 rosidl 런타임 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 테스트(선택) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
