<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ats_system1</name>
  <version>0.1.0</version>
  <description>System-1 executor for ATS: plan orchestration, Nav2 integration, scan & track.</description>

  <maintainer email="engiman0401@gmail.com">geunpilpark</maintainer>
  <license>CC-BY-NC-ND-4.0</license>

  <!-- build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps (Python 노드에서 import/사용하는 ROS 패키지) -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>ats_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- 파이썬 외부 라이브러리: jsonschema (rosdep로 깔 경우) -->
  <exec_depend>python3-jsonschema</exec_depend>

  <!-- test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>