<package format="3">
  <name>head_follow_controller</name>
  <version>0.0.1</version>
  <description>Move Spot body to align with ATS camera heading (TF body->Camera)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>CC-BY-NC-ND-4.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
